--- a/examples/root/index.html
+++ b/examples/root/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Example page</title>
+    <link href="styles/app.css" rel="stylesheet">
 </head>
 <body>
     <h1>Hello from an example</h1>
